new update on product-grid

--- a/base/src/main/res/layout/m_multiplegrid.xml
+++ b/base/src/main/res/layout/m_multiplegrid.xml
@@ -57,6 +57,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="2dp"
+                    android:maxLines="2"
                     android:text="@{listdata.textdata}"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
                     android:gravity="center" />
