--- a/base/src/main/res/layout/m_productitem.xml
+++ b/base/src/main/res/layout/m_productitem.xml
@@ -31,7 +31,7 @@
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/name"
             android:layout_width="0dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintTop_toBottomOf="@id/image"
             bind:layout_constraintEnd_toEndOf="parent"
