--- a/base/src/main/res/layout/m_variantoption.xml
+++ b/base/src/main/res/layout/m_variantoption.xml
@@ -11,6 +11,7 @@
             type="com.shopify.shopifyapp.basesection.models.CommanModel" />
     </data>
     <androidx.cardview.widget.CardView
+        android:id="@+id/main_view"
         android:layout_width="100dp"
         android:layout_height="100dp"
         bind:cardBackgroundColor="@color/white"
