--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -62,7 +62,7 @@
                 android:text="@{productdata.textdata}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
                 android:gravity="center_vertical" />
-            <com.shopify.shopifyapp.customviews.MageNativeTextView
+            <WebView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -73,8 +73,6 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="5dp"
-                android:text="@{productdata.descriptionhmtl}"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                 android:gravity="center_vertical" />
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/specialprice"
