--- a/base/src/main/res/layout/m_personalised.xml
+++ b/base/src/main/res/layout/m_personalised.xml
@@ -31,7 +31,9 @@
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/name"
             android:layout_width="0dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:ellipsize="end"
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintTop_toBottomOf="@id/image"
             bind:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +50,7 @@
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintTop_toBottomOf="@id/name"
             android:maxLines="1"
+            android:ellipsize="end"
             bind:texttype="normal"
             android:paddingEnd="4dp"
             android:layout_marginStart="4dp"
