--- a/base/src/main/res/layout/m_registration.xml
+++ b/base/src/main/res/layout/m_registration.xml
@@ -23,14 +23,14 @@
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:src="@drawable/tes_background"
+                    bind:imageUrl="@{handlers.image}"
                     bind:layout_constraintStart_toStartOf="parent"
                     bind:layout_constraintEnd_toEndOf="parent"
                     bind:layout_constraintTop_toTopOf="parent"
                     bind:layout_constraintBottom_toBottomOf="parent"
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:id="@+id/back_image"
                     />
                 <View
