--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -1,220 +1,276 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="bottomdata"
             type="com.shopify.shopifyapp.cartsection.models.CartBottomData" />
+
         <variable
             name="handler"
             type="com.shopify.shopifyapp.cartsection.activities.CartList.ClickHandler" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-       >
+        android:visibility="gone">
+
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/scroll"
-            app:layout_constraintVertical_weight="0.9"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bottomsection"
-            >
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="0.9">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/gray_color">
+
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cartlist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:id="@+id/cartlist"
                     android:background="@color/white"
                     android:layoutAnimation="@anim/layout_animation"
-                    bind:layout_behavior="@string/appbar_scrolling_view_behavior">
-                </androidx.recyclerview.widget.RecyclerView>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    bind:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.recyclerview.widget.RecyclerView>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/giftcard_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="#FFFFFADC"
+                    android:padding="5dp"
+                    app:layout_constraintTop_toBottomOf="@+id/cartlist">
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/giftcard_edt"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="5dp"
+                        android:background="@drawable/round_corner_lightgray"
+                        android:hint="@string/gift_card"
+                        android:inputType="textCapCharacters"
+                        android:paddingStart="8dp"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/apply_gift_but"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <com.shopify.shopifyapp.customviews.MageNativeButton
+                        android:id="@+id/apply_gift_but"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginStart="5dp"
+                        android:onClick="@{view->handler.applyGiftCard(view,bottomdata)}"
+                        android:text="@string/apply"
+                        app:buttontype="normal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/giftcard_edt"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/subtotaltext"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cartlist"
-                    app:texttype="bold"
-                    android:text="@{bottomdata.subtotaltext}"
                     android:layout_marginStart="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@{bottomdata.subtotaltext}"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    android:gravity="center_vertical" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/giftcard_section"
+                    app:texttype="bold" />
+
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/subtotal"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cartlist"
-                    app:texttype="normal"
-                    android:text="@{bottomdata.subtotal}"
                     android:layout_marginEnd="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@{bottomdata.subtotal}"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    android:gravity="center_vertical" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/giftcard_section"
+                    app:texttype="normal" />
+
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/taxtext"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/taxtext"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/subtotaltext"
-                    app:texttype="bold"
-                    android:visibility="gone"
-                    android:text="@string/taxtext"
-                    android:layout_marginStart="8dp"
-                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    android:gravity="center_vertical" />
+                    app:texttype="bold" />
+
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/tax"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
+                    android:layout_marginEnd="8dp"
+                    android:gravity="center_vertical"
+                    android:text="@{bottomdata.tax}"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/subtotal"
-                    app:texttype="normal"
-                    android:visibility="gone"
-                    android:text="@{bottomdata.tax}"
-                    android:layout_marginEnd="8dp"
-                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    android:gravity="center_vertical" />
+                    app:texttype="normal" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/personalisedsection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/tax"
-                    android:id="@+id/personalisedsection"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@id/tax">
+
                     <com.shopify.shopifyapp.customviews.MageNativeTextView
                         android:id="@+id/personalisedyext"
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
+                        android:layout_margin="8dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/fbt"
+                        android:textAllCaps="true"
+                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:texttype="bold"
-                        android:textAllCaps="true"
-                        android:text="@string/fbt"
-                        android:layout_margin="8dp"
-                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                        android:gravity="center_vertical" />
+                        app:texttype="bold" />
+
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/personalised"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/personalisedyext"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_margin="5dp"
-                        android:id="@+id/personalised"
                         android:background="@color/white"
                         android:layoutAnimation="@anim/layout_animation"
-                        bind:layout_behavior="@string/appbar_scrolling_view_behavior">
-                    </androidx.recyclerview.widget.RecyclerView>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/personalisedyext"
+                        bind:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.recyclerview.widget.RecyclerView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/personalisedsection_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/personalisedsection"
-                    android:id="@+id/personalisedsection_2"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@id/personalisedsection">
+
                     <com.shopify.shopifyapp.customviews.MageNativeTextView
                         android:id="@+id/personalisedyext_2"
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
+                        android:layout_margin="8dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/ymal"
+                        android:textAllCaps="true"
+                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:texttype="bold"
-                        android:textAllCaps="true"
-                        android:text="@string/ymal"
-                        android:layout_margin="8dp"
-                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                        android:gravity="center_vertical" />
+                        app:texttype="bold" />
+
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/personalised_2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/personalisedyext_2"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_margin="5dp"
-                        android:id="@+id/personalised_2"
                         android:background="@color/white"
                         android:layoutAnimation="@anim/layout_animation"
-                        bind:layout_behavior="@string/appbar_scrolling_view_behavior">
-                    </androidx.recyclerview.widget.RecyclerView>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/personalisedyext_2"
+                        bind:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.recyclerview.widget.RecyclerView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/bottomsection"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/bottomsection"
-            app:layout_constraintTop_toBottomOf="@id/scroll"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/scroll"
             app:layout_constraintVertical_weight="0.1">
+
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/grandsection"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:id="@+id/grandsection"
                 android:background="@color/gray_color"
+                app:layout_constraintHorizontal_weight="0.4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                bind:layout_constraintEnd_toStartOf="@id/proceed"
-                app:layout_constraintHorizontal_weight="0.4">
+                bind:layout_constraintEnd_toStartOf="@id/proceed">
+
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    app:texttype="bold"
-                    android:text="@{bottomdata.grandtotal}"
                     android:layout_marginEnd="8dp"
+                    android:text="@{bottomdata.grandtotal}"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:texttype="bold" />
+
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/totaltext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/grandtotal"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/total"
-                    app:texttype="bold"
-                    android:text="@string/grandtotal"
-                    android:layout_marginStart="8dp"
-                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    />
+                    app:texttype="bold" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/proceed"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:id="@+id/proceed"
                 android:background="@color/gray_color"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/grandsection"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="0.6">
+                app:layout_constraintHorizontal_weight="0.6"
+                app:layout_constraintStart_toEndOf="@id/grandsection"
+                app:layout_constraintTop_toTopOf="parent">
+
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    >
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
                     <com.shopify.shopifyapp.customviews.MageNativeButton
                         android:id="@+id/proceedtocheck"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="2dp"
-                        android:singleLine="true"
                         android:gravity="center"
                         android:onClick="@{view->handler.loadCheckout(view,bottomdata)}"
+                        android:singleLine="true"
                         android:text="@string/proceed"
-                        app:buttontype="normal"
-                        />
+                        app:buttontype="normal" />
                 </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
