--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="#FFFFFADC"
+                    android:background="@color/light_cream"
                     android:padding="5dp"
                     app:layout_constraintTop_toBottomOf="@+id/cartlist">
 
