--- a/base/src/main/res/layout/m_productitem.xml
+++ b/base/src/main/res/layout/m_productitem.xml
@@ -1,96 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:bind="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="commondata"
             type="com.shopify.shopifyapp.basesection.models.CommanModel" />
+
         <variable
             name="listdata"
             type="com.shopify.shopifyapp.basesection.models.ListData" />
+
         <variable
             name="clickproduct"
             type="com.shopify.shopifyapp.productsection.adapters.ProductRecylerAdapter.Product" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}">
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
-            android:scaleType="fitXY"
-            android:contentDescription="@string/image"
-            bind:imageUrl="@{commondata.imageurl}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:contentDescription="@string/image"
+            android:scaleType="fitXY"
+            bind:imageUrl="@{commondata.imageurl}"
             bind:layout_constraintDimensionRatio="H,1:1.2"
-            bind:layout_constraintTop_toTopOf="parent"
-            />
+            bind:layout_constraintTop_toTopOf="parent" />
+
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            bind:layout_constraintStart_toStartOf="parent"
-            bind:layout_constraintTop_toBottomOf="@id/image"
-            bind:layout_constraintEnd_toEndOf="parent"
-            bind:texttype="bold"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
+            android:gravity="center_vertical"
             android:text="@{listdata.textdata}"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:gravity="center_vertical" />
+            bind:layout_constraintEnd_toEndOf="parent"
+            bind:layout_constraintStart_toStartOf="parent"
+            bind:layout_constraintTop_toBottomOf="@id/image"
+            bind:texttype="bold" />
+
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/shortdescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:maxLines="1"
+            android:paddingEnd="4dp"
+            android:text="@{listdata.description}"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintTop_toBottomOf="@id/name"
-            android:maxLines="1"
-            bind:texttype="normal"
-            android:paddingEnd="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginEnd="4dp"
-            android:text="@{listdata.description}"
-            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
+            bind:texttype="normal" />
+
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/specialprice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:gravity="center_vertical"
+            android:text="@{listdata.specialprice}"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:visibility="gone"
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintTop_toBottomOf="@id/shortdescription"
-            bind:texttype="bold"
-            android:layout_marginStart="4dp"
-            android:text="@{listdata.specialprice}"
-            android:visibility="gone"
-            android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:gravity="center_vertical" />
+            bind:texttype="bold" />
+
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/offertext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:gravity="center_vertical"
+            android:text="@{listdata.offertext}"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:visibility="gone"
             bind:layout_constraintStart_toEndOf="@id/specialprice"
             bind:layout_constraintTop_toBottomOf="@id/shortdescription"
-            bind:texttype="normal"
-            android:layout_marginStart="5dp"
-            android:text="@{listdata.offertext}"
-            android:visibility="gone"
-            android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:gravity="center_vertical" />
+            bind:texttype="normal" />
+
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/regularprice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            bind:layout_constraintStart_toStartOf="parent"
-            bind:layout_constraintTop_toBottomOf="@id/specialprice"
-            bind:texttype="normal"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="10dp"
-            android:text="@{listdata.regularprice}"
+            android:gravity="center_vertical"
             android:paddingBottom="10dp"
+            android:text="@{listdata.regularprice}"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:gravity="center_vertical" />
+            bind:layout_constraintStart_toStartOf="parent"
+            bind:layout_constraintTop_toBottomOf="@id/specialprice"
+            bind:texttype="normal" />
+
+        <com.shopify.shopifyapp.customviews.MageNativeButton
+            android:id="@+id/addCart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            bind:buttontype="normal"
+            android:visibility="gone"
+            android:onClick="@{(view) -> clickproduct.addCart(view,listdata)}"
+            android:text="Add"
+            bind:layout_constraintStart_toStartOf="parent"
+            bind:layout_constraintTop_toBottomOf="@+id/regularprice" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
