--- a/base/src/main/res/layout/m_slideritemone.xml
+++ b/base/src/main/res/layout/m_slideritemone.xml
@@ -15,7 +15,7 @@
     </data>
     <androidx.cardview.widget.CardView
         android:layout_width="180dp"
-        android:layout_height="280dp"
+        android:layout_height="wrap_content"
         app:cardUseCompatPadding="true"
         android:layout_margin="2dp"
         app:cardElevation="6dp"
@@ -89,6 +89,15 @@
                         android:gravity="center_vertical" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/addCart"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:onClick="@{(view) -> clickproduct.addCart(view,listdata)}"
+                app:layout_constraintTop_toBottomOf="@+id/nameandpricesection"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
