--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="black">#000000</color>
     <color name="main_color_gray_lt">#acacac</color>
     <color name="green">#008000</color>
+    <color name="light_cream">#FFFFFADC</color>
 </resources>
