--- a/base/src/main/res/layout/m_categorygriditem.xml
+++ b/base/src/main/res/layout/m_categorygriditem.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:cardCornerRadius="0dp"
             app:cardElevation="0dp"
             app:cardUseCompatPadding="true"
