Solved crashes issues & added price change on variant selection and image stretching issues

--- a/base/src/main/res/layout/m_productlistitem.xml
+++ b/base/src/main/res/layout/m_productlistitem.xml
@@ -11,6 +11,12 @@
         android:layout_height="match_parent">
         <include layout="@layout/m_productmain"
             bind:handler="@{handler}"/>
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#99000000"
+            android:visibility="gone" />
         <include layout="@layout/m_bottomsheet"
             bind:handler="@{handler}"/>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
