--- a/base/src/main/res/layout/m_imagefragment.xml
+++ b/base/src/main/res/layout/m_imagefragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
-            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/image"
             bind:imageUrl="@{commondata.imageurl}"
             android:layout_width="match_parent"
