--- a/base/src/main/res/layout/m_splash.xml
+++ b/base/src/main/res/layout/m_splash.xml
@@ -17,12 +17,11 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/splashimage"
+            imageUrl="@{commonmodel.imageurl}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            bind:imageUrl="@{commonmodel.imageurl}"
-            bind:layout_constraintBottom_toBottomOf="parent" />
+            android:scaleType="fitXY" />
 
         <ProgressBar
             android:layout_width="wrap_content"
