--- a/base/src/main/res/layout/m_productitem.xml
+++ b/base/src/main/res/layout/m_productitem.xml
@@ -32,6 +32,15 @@
             bind:layout_constraintDimensionRatio="H,1:1.2"
             bind:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/out_of_stock"
+            android:layout_width="80dp"
+            android:visibility="gone"
+            android:layout_height="80dp"
+            android:src="@drawable/outofstock"
+            bind:layout_constraintBottom_toBottomOf="@+id/image"
+            bind:layout_constraintEnd_toEndOf="@+id/image" />
+
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/name"
             android:layout_width="0dp"
@@ -105,10 +114,10 @@
             android:id="@+id/addCart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            bind:buttontype="normal"
-            android:visibility="gone"
             android:onClick="@{(view) -> clickproduct.addCart(view,listdata)}"
             android:text="Add"
+            android:visibility="gone"
+            bind:buttontype="normal"
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintTop_toBottomOf="@+id/regularprice" />
 
