--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -36,6 +36,15 @@
                 bind:layout_constraintDimensionRatio="H,1:1.2"
                 bind:layout_constraintTop_toTopOf="parent" />
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/out_of_stock"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:visibility="gone"
+                android:src="@drawable/outofstock"
+                bind:layout_constraintBottom_toBottomOf="@+id/images"
+                bind:layout_constraintEnd_toEndOf="@+id/images" />
+
             <com.shopify.shopifyapp.utils.CirclePageIndicator
                 android:id="@+id/indicator"
                 android:layout_width="wrap_content"
@@ -61,10 +70,12 @@
                 android:layout_height="50dp"
                 android:onClick="@{view->clickhandlers.shareProduct(view,productdata)}"
                 android:padding="12dp"
+                bind:layout_constraintHorizontal_weight="0.1"
+                bind:layout_constraintTop_toBottomOf="@+id/images"
                 android:src="@drawable/ic_share"
                 android:visibility="@{features.product_share ? View.VISIBLE : View.GONE}"
-                bind:layout_constraintBottom_toBottomOf="@id/images"
-                bind:layout_constraintEnd_toEndOf="@id/images" />
+                bind:layout_constraintStart_toEndOf="@+id/name"
+                bind:layout_constraintEnd_toEndOf="parent"/>
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/name"
@@ -72,10 +83,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginTop="10dp"
+                bind:layout_constraintHorizontal_weight="0.9"
                 android:gravity="center_vertical"
                 android:text="@{productdata.textdata}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintEnd_toStartOf="@+id/shareicon"
                 bind:layout_constraintStart_toStartOf="parent"
                 bind:layout_constraintTop_toBottomOf="@id/images"
                 bind:texttype="bold" />
@@ -90,7 +103,7 @@
                 android:gravity="center_vertical"
                 bind:layout_constraintEnd_toEndOf="parent"
                 bind:layout_constraintStart_toStartOf="parent"
-                bind:layout_constraintTop_toBottomOf="@id/name"
+                bind:layout_constraintTop_toBottomOf="@id/shareicon"
                 bind:texttype="normal" />
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
